--- a/app/views/onboarding_mailer/current_roadmap.html.erb
+++ b/app/views/onboarding_mailer/current_roadmap.html.erb
@@ -1,17 +1,5 @@
-<p>Hey again, it's @joshmn, back with your second drip!</p>
-<p>There are a few upcoming features as of writing. Here's what we got:</p>
-<ul>
-  <li><strong>Planned</strong> handle of changes to drip actions</li>
-  <li><strong>Planned</strong> mountable web UI</li>
-  <li><strong>Planned</strong> better documentation for the internals</li>
-  <li><strong>Planned</strong> periodicals</li>
-  <li><strong>Reviewing</strong> one-off emails</li>
-  <li><strong>Reviewing</strong> tagging</li>
-  <li><strong>Reviewing</strong> optional daemon</li>
-  <li><strong>Reviewing</strong> REST API</li>
-  <li><strong>Reviewing</strong> standalone app</li>
-  <li><strong>Reviewing</strong> web-based drip creation and management</li>
-</ul>
+<p>Hey again, it's <a href="https://twitter.com/joshmn">@joshmn</a>, back with your second drip!</p>
+<p>There are a few upcoming features as of writing. <a href="https://github.com/joshmn/caffeinate/projects/1">Follow along on GitHub</a>!</p>
 <p>If you have any features you'd like to see, or have a use-case that you think should be covered, just hit that reply
 button. :)</p>
 <p>Thanks again for giving Caffeinate some consideration! It's flattering and I hope that I can make your app development
