--- a/app/views/onboarding_mailer/this_is_caffeinate.html.erb
+++ b/app/views/onboarding_mailer/this_is_caffeinate.html.erb
@@ -1,4 +1,4 @@
-<p>Hey, it's @joshmn, the guy who made Caffeinate. Thanks for giving Caffeinate a try.</p>
+<p>Hey, it's <a href="https://twitter.com/joshmn">@joshmn</a>, the guy who made Caffeinate. Thanks for giving Caffeinate a try.</p>
 <p>Doing so might just be the second-best decision you've made in 2020. The first-best would be wearing a mask.</p>
 <p>I made Caffeinate because I wanted to control the entire lifecycle of my campaigns. I'm a serial SaaS founder and these
   kind of things matter to me. I also wanted something that integrated nicely into my existing tools:
