--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="col-sm-7">
-        <p class="small text-gray-600 text-center text-sm-left">&copy; <%= Time.current.year %> Josh Brody. All rights reserved.</p>
+        <p class="small text-gray-600 text-center text-sm-left">&copy; <%= Time.current.year %> <a href="https://twitter.com/joshmn">Josh Brody</a>. All rights reserved.</p>
       </div>
     </div>
   </div>
