--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="muse-header py-0 py-sm-2">
   <div class="container">
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="javascript:void(0);">
+      <a class="navbar-brand" href="/">
         <%= image_tag('logotype-h.png', style: "max-height:96px") %>
       </a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
