--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-sm-5 order-sm-2">
         <div class="social-icons">
-          <a href="javascript:void(0);" class="h5">
+          <a href="https://github.com/joshmn/caffeinate" class="h5">
             <i class="fa fa-github"></i>
           </a>
           <a href="https://twitter.com/joshmn" class="h5">
