--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -11,6 +11,17 @@
       </div>
     </div>
   </section>
+
+  <section class="muse-section text-center">
+    <div class="row">
+      <div class="col-lg-12 px-5">
+        <h6 class="font-weight-semibold">Why, oh why do you need this?</h6>
+        <h2>You could build your own and end up with a brittle nobody-touch-it-it-will-fall-apart solution, or you could pay $500/month to Intercom or another vendor.</h2>
+        <h2>Skip the vendor lock-in. Use Caffeinate.</h2>
+      </div>
+    </div>
+  </section>
+
   <section class="muse-section">
     <div class="row pt-0 pt-md-5 align-items-center">
       <div class="col-lg-6 pb-5">
@@ -25,8 +36,6 @@
       </div>
     </div>
   </section>
-
-  <hr>
 
   <!-- Muse Section -->
   <section class="muse-section">
@@ -210,7 +219,7 @@
           <button class="btn btn-xl btn-warning text-uppercase caption px-3" type="button" id="button-addon2">Sign up</button>
         </div>
       </form>
-      <p class="small text-gray-600 mt-2 pt-1 lh-sm">Questions? Comments? I'm <a href="https://twitter.com/joshmn">@joshmn</a> on Twitter (and all over the internet except Instagram.) </p>
+      <p class="small text-gray-600 mt-2 pt-1 lh-sm">Questions? Comments? Wanna be friends? I'm <a href="https://twitter.com/joshmn">@joshmn</a> on Twitter (and all over the internet except Instagram.) </p>
     </div>
   </section>
 </div>
