--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -15,7 +15,7 @@
   <section class="muse-section text-center">
     <div class="row">
       <div class="col-lg-12 px-5">
-        <h6 class="font-weight-semibold">Why, oh why do you need this?</h6>
+        <h6 class="font-weight-semibold">Why do you need this?</h6>
         <h2>You could build your own and end up with a brittle nobody-touch-it-it-will-fall-apart solution, or you could pay $500/month to Intercom or another vendor.</h2>
         <h2>Skip the vendor lock-in. Use Caffeinate.</h2>
       </div>
@@ -40,7 +40,7 @@
   <!-- Muse Section -->
   <section class="muse-section">
     <h6 class="text-center">Get the party started</h6>
-    <h2 class="h1 mb-4 pb-4 text-center">Integrate Caffeinate in 5 easy steps</h2>
+    <h2 class="h1 mb-4 pb-4 text-center">Integrate Caffeinate in 5 minutes or less.</h2>
     <div class="row my-4 my-lg-5">
       <div class="col-lg-6 order-1 order-md-0" data-aos="fade-up" data-aos-delay="100">
         <pre class="language-bash">
@@ -53,9 +53,9 @@
             create  config/initializers/caffeinate.rb
             create  app/drippers/application_dripper.rb
             insert  config/routes.rb
-            Copied migration 20201205175248_create_caffeinate_campaigns.caffeinate.rb from caffeinate
-            Copied migration 20201205175249_create_caffeinate_campaign_subscriptions.caffeinate.rb from caffeinate
-            Copied migration 20201205175250_create_caffeinate_mailings.caffeinate.rb from caffeinate
+            Copied migration <%= @now.strftime('%Y%m%d%H%M%S') %>_create_caffeinate_campaigns.rb from caffeinate
+            Copied migration <%= (@now + 1).strftime('%Y%m%d%H%M%S') %>_create_caffeinate_campaign_subscriptions.rb from caffeinate
+            Copied migration <%= (@now + 3).strftime('%Y%m%d%H%M%S') %>_create_caffeinate_mailings.caffeinate.rb from caffeinate
             $ rails db:migrate
             == <%= @now.strftime('%Y%m%d%H%M%S') %> CreateCaffeinateCampaigns: migrating =============================
             ...
@@ -71,43 +71,15 @@
         </pre>
       </div>
       <div class="col-lg-6 order-0 order-md-1">
-        <div class="py-3 py-xl-5 px-lg-5">
           <h2 class="mb-3 mt-3 mt-lg-0">Add the gem</h2>
           <p class="mb-4 lh-lg">You've done this before. Add the <code>caffeinate</code> gem to your <code>Gemfile</code> and do a <code>bundle</code>.
             This will copy over some some migrations, an initializer, and create a new directory in your <code>app</code> folder.
           </p>
           <p>From there, run <code>rails db:migrate</code> to get your schema updated. Restart your Rails server, and behold, everything looks the same!</p>
         </div>
-      </div>
     </div>
     <div class="row py-4 py-lg-5">
-      <div class="col-lg-6 order-lg-2 order-1 order-md-1" data-aos="fade-up" data-aos-delay="100">
-        <pre class="language-bash">
-          <code>
-            $ rails c
-            Running via Spring preloader in process 58358
-            Loading development environment (Rails 6.0.3.4)
-          </code>
-        </pre>
-        <pre class="language-ruby">
-          <code>
-            irb(main):001:0> Caffeinate::Campaign.create(name: "Onboarding Campaign", slug: "onboarding")
-            (0.1ms)  begin transaction
-            Caffeinate::Campaign Create (0.6ms)  INSERT INTO "caffeinate_campaigns" ("name", "slug", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["name", "Onboarding Campaign"], ["slug", "onboarding"], ["created_at", "<%= @now.to_formatted_s(:db) %>.<%= rand(1_000_000) %>"], ["updated_at", "<%=@now.to_formatted_s(:db) %>.<%= rand(1_000_000) %>"]]
-            (1.0ms)  commit transaction
-            => &lt;Caffeinate::Campaign id: 1, name: "Onboarding Campaign", slug: "onboarding", created_at: "<%= @now.to_formatted_s(:db) %>", updated_at: "<%= @now.to_formatted_s(:db) %>">
-          </code>
-        </pre>
-      </div>
-      <div class="col-lg-6 order-0">
-        <div class="py-3 py-xl-5 px-lg-5">
-          <h2 class="mb-3 mt-3 mt-lg-0">Create a Campaign</h2>
-          <p class="mb-4 lh-lg">Each email sequence or periodical email is related to a Campaign. It's not exposed publicly, but instead to your developers. Keep the <code>slug</code> attribute in mind: we'll be referencing this later.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row py-4 py-lg-5">
-      <div class="col-lg-6 order-1 order-md-0" data-aos="fade-up" data-aos-delay="100">
+      <div class="col-lg-6 order-1 order-md-1" data-aos="fade-up" data-aos-delay="100">
         <pre class="language-bash">
           <code>
             vi app/drippers/onboarding_dripper.rb
@@ -116,7 +88,6 @@
         <pre class="language-ruby">
           <code>
             class OnboardingDripper < ApplicationDripper
-              self.campaign = :onboarding
               defaults mailer_class: "OnboardingDripperMailer"
 
               # If the user completed onboarding, they don't need our help anymore.
@@ -137,19 +108,16 @@
           </code>
         </pre>
       </div>
-      <div class="col-lg-6 order-0 order-md-1">
-        <div class="py-3 py-xl-5 px-lg-5">
+      <div class="col-lg-6 order-0 order-md-0">
           <h2 class="mb-3 mt-3 mt-lg-0">Create a Dripper</h2>
           <p class="mb-4 lh-lg">The Dripper handles the logic for your email sequence or periodical. It references the relevant ActionMailer class and actions, and when you want them to be sent. Oh, and because this is Rails, callbacks!</p>
           <p class="mb-4 lh-lg">When you subscribe a user (or anything) to a Campaign, we create <code>Caffeinate::Mailing</code> records for them, which correspond to an <code>ActionMailer</code> action. </p>
-            <rect data-name="Icons/Tabler/Chevron Right background" width="16" height="16" fill="none"/>
-            <path d="M.26.26A.889.889,0,0,1,1.418.174l.1.086L8.629,7.371a.889.889,0,0,1,.086,1.157l-.086.1L1.517,15.74A.889.889,0,0,1,.174,14.582l.086-.1L6.743,8,.26,1.517A.889.889,0,0,1,.174.36Z" transform="translate(4)" fill="#ffffff"/>
-          </svg></a>
-        </div>
+          <p class="mb-4 lh-lg">When no <code>self.campaign = :slug</code> is present in the Dripper, Dripper will automatically perform a `find_or_create_by` on <code>Caffeinate::Campaign</code> per Rails conventions.</p>
+
       </div>
     </div>
     <div class="row py-4 py-lg-5">
-      <div class="col-lg-6 order-1 order-md-1" data-aos="fade-up" data-aos-delay="100">
+      <div class="col-lg-6 order-1 order-md-0" data-aos="fade-up" data-aos-delay="100">
         <pre class="language-ruby">
           <code>
             class User < ApplicationRecord
@@ -166,17 +134,15 @@
           </code>
         </pre>
       </div>
-      <div class="col-lg-6">
-        <div class="py-3 py-lg-5 px-lg-5 order-0">
+      <div class="col-lg-6 order-0">
           <h2 class="mb-3 mt-3 mt-lg-0">Subscribe to the Campaign</h2>
           <p class="mb-4 lh-lg">Now that we have our Campaign and a Dripper, we need to subscribe something to the Campaign. A subscriber can be any ActiveRecord object. We'll assume a User object, though.</p>
           <p class="mb-4 lh-lg">Don't worry, there are more options for more advanced setups.</p>
-        </div>
       </div>
     </div>
 
     <div class="row py-4 py-lg-5">
-      <div class="col-lg-6 order-1 order-md-0" data-aos="fade-up" data-aos-delay="100">
+      <div class="col-lg-6 order-1 order-md-1" data-aos="fade-up" data-aos-delay="100">
         <pre class="language-bash">
           <code>
             vi app/workers/onboarding_dripper_worker.rb
@@ -195,11 +161,9 @@
         </pre>
       </div>
       <div class="col-lg-6">
-        <div class="py-3 py-xl-5 px-lg-5">
           <h2 class="mb-3 mt-3 mt-lg-0">Deliver the messages</h2>
           <p class="mb-4 lh-lg">Last but not least, we need to have the messages delivered. Running the <code>Dripper#perform!</code> method on the Dripper class will check for any emails that need to be sent according to the times we gave them and send them if it's time. </p>
           <p class="mb-4 lh-lg">Caffeinate is background-processor-agnostic. All you need to do is make sure you run <code>#perform!</code> on the Dripper class at a given interval and Caffeinate will take care of the rest.</p>
-        </div>
       </div>
     </div>
 
