--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -179,7 +179,7 @@
       <form class="mt-4 mx-lg-4 px-md-2 pt-2" action="/users/sign_in" method="get">
         <div class="input-group input-group-xl">
           <input type="text" class="form-control" placeholder="Email" aria-label="Email" name="user[email]" aria-describedby="button-addon2">
-          <button class="btn btn-xl btn-warning text-uppercase caption px-3" type="button" id="button-addon2">Sign up</button>
+          <button class="btn btn-xl btn-warning text-uppercase caption px-3" type="submit" id="button-addon2">Sign up</button>
         </div>
       </form>
       <p class="small text-gray-600 mt-2 pt-1 lh-sm">Questions? Comments? Wanna be friends? I'm <a href="https://twitter.com/joshmn">@joshmn</a> on Twitter (and all over the internet except Instagram.) </p>
