--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -176,7 +176,7 @@
     <div class="col-12 col-md-9 col-xl-8 m-auto text-center py-md-4">
       <h2 class="h1 mb-0">Give it a try</h2>
       <p class="big text-white-600">This marketing site runs Caffeinate under the hood. Sign up, sign in, and see a demo app in action. Unsubscribe any time, and even delete your account!</p>
-      <form class="mt-4 mx-lg-4 px-md-2 pt-2" action="/users/sign_in" method="get">
+      <form class="mt-4 mx-lg-4 px-md-2 pt-2" action="/user" method="get">
         <div class="input-group input-group-xl">
           <input type="text" class="form-control" placeholder="Email" aria-label="Email" name="user[email]" aria-describedby="button-addon2">
           <button class="btn btn-xl btn-warning text-uppercase caption px-3" type="submit" id="button-addon2">Sign up</button>
