seeds; update to latest version of caffeinate

--- a/app/views/layouts/caffeinate.html.erb
+++ b/app/views/layouts/caffeinate.html.erb
@@ -1,3 +1,5 @@
+<%= render 'layouts/header' %>
+
 <div class="container ">
   <section class="muse-section pt-4">
     <%= render_flash %>
@@ -36,5 +38,6 @@
     </div>
   </section>
 </div>
+<%= render 'layouts/footer' %>
 
 <% parent_layout "application" %>
